--- a/src/app/Components/check-inout/cio-details/cio-details.component.html
+++ b/src/app/Components/check-inout/cio-details/cio-details.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid  p-3" style="overflow: scroll; height: 600px;">
+<div class="container-fluid  p-3" style="overflow: scroll; max-height: 600px;">
     
     <div class="d-flex justify-content-between cursorPointer p-2 border-bottom">
-        <p class="dialogueTitle">CIO Voucher Details</p>
+        <p class="dialogueTitle">CIO VOUCHER DETAILS</p>
         <mat-icon (click)="closeDialogue()">cancel</mat-icon>
     </div>
     
