--- a/src/app/Components/hotel-dashboard/hotel-dashboard.component.html
+++ b/src/app/Components/hotel-dashboard/hotel-dashboard.component.html
@@ -111,7 +111,7 @@
    
                                <p class="mt-2 me-1 border border-dark" style="width: 15px;height: 15px;background-color: rgb(255, 255, 255);">
                                </p>
-                               <h5 class="mt-2 me-1">Empty</h5>
+                               <h5 class="mt-2 me-1">Vacant</h5>
                            </span>
                            <span class="d-flex me-2" >
    
@@ -182,7 +182,7 @@
                     
                     <div class="justify-content-center text-start d-flex">
                         <span class="d-flex me-2">
-                            <mat-icon class="eColor">indeterminate_check_box</mat-icon> <p class="m-1">Empty</p> 
+                            <mat-icon class="eColor">indeterminate_check_box</mat-icon> <p class="m-1">Vacant</p> 
                         </span>
                         <span class="d-flex me-2">
                             <mat-icon class="cColor">hotel</mat-icon> <p class="m-1">Checked IN</p>
