--- a/src/styles.scss
+++ b/src/styles.scss
@@ -499,6 +499,9 @@ input[type="number"]::-webkit-inner-spin-button{
 
 
 
+////////////////////////////////
+/// Top Nav Ba Drop down Style/////
+/// /////////////////////////////
 
 
 .dropdown {
@@ -513,6 +516,8 @@ input[type="number"]::-webkit-inner-spin-button{
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  overflow-y: scroll;
+   max-height: 500px;
 }
 
 .dropdown-content a {
